<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootHiscoreScreen"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnightBlue"
    tools:context=".screens.HiscoreScreen">

    <TextView
        android:id="@+id/title_game_hiscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/title_game_screen"
        android:text="*"
        android:textColor="@color/gold"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="@+id/title_game_hiscore"
        app:layout_constraintStart_toEndOf="@+id/title_game_hiscore"
        app:layout_constraintTop_toTopOf="@+id/title_game_hiscore" />

    <TextView
        android:id="@+id/subtitle_hiscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_screen_hiscore"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/title_game_hiscore"
        app:layout_constraintTop_toBottomOf="@+id/title_game_hiscore" />

    <TextView
        android:id="@+id/instructions_hiscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/instruction_text_hiscore"
        android:textColor="@color/gold"
        android:layout_margin="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>