<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootHiscoreActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnightBlue"
    tools:context=".screens.HiscoresActivity">

    <TextView
        android:id="@+id/title_game_hiscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/title_game_screen"
            android:text="*"
            android:textColor="@color/gold"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toBottomOf="@+id/title_game_hiscore"
            app:layout_constraintStart_toEndOf="@+id/title_game_hiscore"
            app:layout_constraintTop_toTopOf="@+id/title_game_hiscore" />

    <TextView
        android:id="@+id/subtitle_hiscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/game_screen_hiscore"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/title_game_hiscore"
        app:layout_constraintTop_toBottomOf="@+id/title_game_hiscore" />

        <TextView
            android:id="@+id/instructions_hiscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/instruction_text_hiscore"
            android:textColor="@color/gold"
            android:layout_margin="@dimen/margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/firstPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_hiscore"
        android:layout_marginTop="@dimen/margin_top_hiscore"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="@dimen/text_score_dim"
        app:layout_constraintStart_toStartOf="@+id/title_game_hiscore"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_hiscore"
        tools:text="0:22 - WiredName" />

    <TextView
        android:id="@+id/timePlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="@dimen/text_score_dim"
        tools:text="0:13 - "
        app:layout_constraintStart_toStartOf="@+id/firstPlayers"
        app:layout_constraintTop_toBottomOf="@+id/firstPlayers" />

    <EditText
        android:id="@+id/enterNameEdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:lines="1"
        android:hint="@string/hint_name"
        android:textColorHint="@color/gray"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:background="@null"
        android:textColor="@color/white"
        android:textSize="@dimen/text_score_dim"
        app:layout_constraintStart_toEndOf="@+id/timePlayerText"
        app:layout_constraintTop_toBottomOf="@+id/firstPlayers"
        />

    <TextView
        android:id="@+id/lastPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:text="0:32 - NameContinuation"
        android:textSize="@dimen/text_score_dim"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/timePlayerText"
        app:layout_constraintTop_toBottomOf="@+id/timePlayerText" />

    <TextView
        android:id="@+id/errorMsgViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="@dimen/text_score_dim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/internet_error_msg" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/instructions_hiscore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_hiscore" />

</android.support.constraint.ConstraintLayout>